# geopilot-publisher

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MEDIA_SUBMISSION_CHECKLIST.md  README.md  git_init_push.sh  git_init_push_existing_remote.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  media_request.md
.github/workflows/: media-pipeline.yml
assets/audio/: README.md
assets/documents/: README.md
assets/icons/: README.md
assets/images/: README.md
assets/logos/: README.md
assets/screenshots/: README.md
assets/videos/: README.md
bootstrap/: get_refresh_token.py
content/: keywords.txt  script.txt
geopilot_publisher/config/: settings.yaml
geopilot_publisher/config/personas/: calm_analyst.yaml
geopilot_publisher/config/prompts/: idea.prompt.txt  script.prompt.txt
geopilot_publisher/models/: idea.py  script.py  video_metadata.py
geopilot_publisher/pipeline/: run.py  stages.py
geopilot_publisher/services/: elevenlabs_client.py  openai_client.py  openai_tts_client.py  youtube_client.py
geopilot_publisher/stages/: generate_ideas.py  generate_script.py  render_video.py  tts.py  upload_youtube.py
geopilot_publisher/utils/: captions.py  ffmpeg.py  logging.py  paths.py
tools/: preview.sh
